--- a/src/components/styles/Quizz.css
+++ b/src/components/styles/Quizz.css
@@ -35,14 +35,13 @@
     color: #50fa7b;
     margin-bottom: 15px;
     font-size: 24px;
+    text-align: center;
 }
 
-.quizz-info-container p {
-    font-size: 16px;
-    margin-bottom: 10px;
-    color: #e0e0e0;
-    max-width: 90%;
-    line-height: 1.6;
+.quizz-info-container>li{
+    text-align: start;
+    width: 80%;
+    padding: 10px;
 }
 
 .quizz-container-unique {
