--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@ nav a.active {
     position: absolute;
     transition: all 1s;
     top: 100%;
-    background: linear-gradient(rgb(74, 74, 74), rgb(2, 2, 2), transparent);
+    background: linear-gradient(rgb(22, 22, 22), rgb(2, 2, 2), rgba(0, 0, 0, 0.689));
     height: 100vh;
     padding: 2.5%;
   }
