--- a/src/components/styles/ChatEx.css
+++ b/src/components/styles/ChatEx.css
@@ -74,13 +74,16 @@
 .chat-input {
   flex: 1;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
   backdrop-filter: blur(5px);
   background-color: rgba(110, 110, 110, 0.408);
   padding: 20px;
   border-left: 2px solid #ddd;
+}
+.usernamein{
+  cursor: pointer;
 }
 
 .chat-input input {
