--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,7 @@ body {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  z-index: 10;
+  z-index: 1000;
   padding: 15px 0px;
   transition: all .5s;
 }
@@ -202,6 +202,10 @@ nav a.active {
     transition: margin-left 2.2s;
     order: 6;
   }
+  .link-container>li:nth-child(6) {
+    transition: margin-left 2.6s;
+    order: 7;
+  }
 
   .link-container li a:hover {
     width: 100%;
@@ -255,14 +259,14 @@ nav a.active {
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.918);
   position: fixed;
-  z-index: 11;
+  z-index: 1001;
 }
 
 #rocket-icon {
   transform: translate(400px, -400px);
   rotate: -45deg;
   animation: color-changer 1.5s ease-in infinite;
-  z-index: 8;
+  z-index: 101;
   font-size: 50px;
 }
 
@@ -275,13 +279,13 @@ nav a.active {
   animation: maketail 1.5s ease-in infinite;
   border-radius: 20px;
   box-shadow: 1px 1px 20px 1px white;
-  z-index: 7;
+  z-index: 100;
 }
 
 .loading-title {
   position: fixed;
   color: rgb(128, 240, 255);
-  z-index: 9;
+  z-index: 100;
 }
 
 .spinner-loading {
